@@ -1,4 +1,4 @@
-#!/usr/bin/icmake -qt/tmp/exec
+#!tmp/icmake -qt/tmp/exec
 
 // script generated by the C++ icmake script version 2.33
 
