@@ -1,4 +1,4 @@
-#!/usr/bin/icmake -qt/tmp/un
+#!tmp/icmake -qt/tmp/un
 
 // script generated by the C++ icmake script version 2.33
 
