@@ -1,4 +1,4 @@
-#!/usr/bin/icmake -qt /tmp/unix
+#!tmp/icmake -qt /tmp/unix
 
 /*
 
